[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/player.gd" type="Script" id=1]
[ext_resource path="res://Player/hat.mesh" type="ArrayMesh" id=2]
[ext_resource path="res://Sounds/hit.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/synth.wav" type="AudioStream" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 0.5

[sub_resource type="SpatialMaterial" id=2]

[sub_resource type="CapsuleMesh" id=3]
material = SubResource( 2 )
radius = 0.5
mid_height = 0.5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.705882, 0.278431, 0.278431, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_bottom_right = 30

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.392157 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_bottom_right = 30

[node name="Player" type="KinematicBody" groups=[
"player",
]]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="Hat" type="MeshInstance" parent="."]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0.437395, 0.26492 )
mesh = ExtResource( 2 )
material/0 = null

[node name="Rotation_Helper" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Rotation_Helper"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )

[node name="Healthbar" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.66459, 0 )

[node name="HitSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
stream = ExtResource( 3 )
max_distance = 10.0

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Aim" type="ColorRect" parent="GUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.5
margin_top = -2.5
margin_right = 2.5
margin_bottom = 2.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ProgressBar" parent="GUI"]
margin_left = 30.0
margin_top = 30.0
margin_right = 430.0
margin_bottom = 60.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI"]
margin_left = 1000.0
margin_top = 20.0
margin_right = 1140.0
margin_bottom = 360.0
rect_scale = Vector2( 2, 2 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Winner" type="Label" parent="GUI"]
margin_left = 140.0
margin_top = 150.0
margin_right = 640.0
margin_bottom = 164.0
rect_scale = Vector2( 2, 2 )
align = 1
valign = 1
autowrap = true

[node name="Timer" type="Timer" parent="GUI/Winner"]
wait_time = 4.0

[node name="Synth" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
max_db = -5.0
autoplay = true
[connection signal="timeout" from="GUI/Winner/Timer" to="." method="_on_Timer_timeout"]
